--- a/src/main/webapp/WEB-INF/fragments/header.jspf
+++ b/src/main/webapp/WEB-INF/fragments/header.jspf
@@ -1,8 +1,9 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ taglib prefix="security" uri="http://www.springframework.org/security/tags" %>
 <header>
     <nav class="navbar navbar-expand-sm bg-yellow navbar-dark">
         <ul class="navbar-nav">
-            <a class="navbar-brand" href="<c:url value="/" />">MySensor</a>
+            <a class="navbar-brand" href="<c:url value="/" />">MySensor: <security:authentication property='principal.username'/></a>
             <li class="nav-item active">
                 <a class="nav-link" href="<c:url value="/" />">Sensory</a>
             </li>
@@ -12,25 +13,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="<c:url value="/edit-user-details" />">Dane użytkownia</a>
             </li>
-            <c:choose>
-                <c:when test="${principal.username == 'Admin'}">
+                <%--<c:when test="${'Admin' == <security:authentication property='principal.username'/>}">--%>
+                <security:authorize access="hasRole('ROLE_ADMIN')">
                     <li class="nav-item">
                         <a class="nav-link" href="<c:url value="/admin/sensor-types" />">Typy sensorów</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="<c:url value="/admin/sensor-data-types" />">Typy danych</a>
                     </li>
-                </c:when>
-            </c:choose>
-            <%--<li class="nav-item">--%>
-            <%--<a class="nav-link" href="<c:url value="/customer/manager" />">Klienci</a>--%>
-            <%--</li>--%>
-            <%--<li class="nav-item">--%>
-            <%--<a class="nav-link" href="<c:url value="/vehicles/manager" />">Pojazdy</a>--%>
-            <%--</li>--%>
-            <%--<li class="nav-item">--%>
-            <%--<a class="nav-link" href="<c:url value="/orders/manager" />">Zlecenia</a>--%>
-            <%--</li>--%>
+                </security:authorize>
         </ul>
     </nav>
 </header>
